<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rel_lay_set_new_password_frag"
    tools:context="com.example.dhrumil.healthcare.resetPassword.fragment.SetNewPasswordFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_otp_info"
        android:text="@string/reg_info"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_enter_info"
        android:layout_below="@id/txt_otp_info"
        android:hint="@string/reg_label"
        android:layout_marginTop="4dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_new_password"
        android:layout_below="@id/edt_enter_info"
        android:hint="@string/new_password"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_reenter_new_password"
        android:layout_below="@id/edt_new_password"
        android:hint="@string/reenter_password"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:layout_below="@id/edt_reenter_new_password"
        android:hint="@string/submit"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancel"
        android:layout_toEndOf="@id/btn_submit"
        android:layout_alignTop="@id/btn_submit"
        android:hint="@string/cancel"/>

</RelativeLayout>
