<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_lay_patient_login">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_email_id_login"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_alert_email_id_login"
            android:layout_below="@id/edt_email_id_login"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_phone_no_login"
            android:hint="@string/phone_no"
            android:layout_below="@+id/txt_alert_email_id_login"
            android:inputType="phone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_alert_phone_no_login"
            android:layout_below="@id/edt_phone_no_login"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_date_of_birth_login"
            android:hint="@string/date_of_birth"
            android:layout_below="@id/txt_alert_phone_no_login"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_alert_date_of_birth_login"
            android:layout_below="@id/txt_date_of_birth_login"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_age_login"
            android:hint="@string/age"
            android:layout_below="@id/txt_alert_date_of_birth_login"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_alert_age_login"
            android:layout_below="@id/edt_age_login"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_address_login"
            android:hint="@string/address"
            android:layout_below="@id/txt_alert_age_login"
            android:inputType="textMultiLine"
            android:lines="6"
            android:minLines="4"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:gravity="top|start"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_alert_address_login"
            android:layout_below="@id/edt_address_login"/>
        <TextView
            android:layout_width="70dp"
            android:layout_height= "wrap_content"
            android:id="@+id/txt_height_login"
            android:hint="@string/height"
            android:layout_below="@id/txt_alert_address_login"
            android:textSize="18sp"/>
        <Spinner
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/spin_feet_login"
            android:layout_toEndOf="@id/txt_height_login"
            android:layout_alignTop="@id/txt_height_login"
            >
        </Spinner>
        <TextView
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_feet_login"
            android:layout_toEndOf="@id/spin_feet_login"
            android:layout_alignTop="@id/spin_feet_login"
            android:hint="@string/feet"
            android:textSize="18sp"/>
        <Spinner
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/spin_inch_login"
            android:layout_toEndOf="@id/txt_feet_login"
            android:layout_alignTop="@id/txt_feet_login"
            >
        </Spinner>
        <TextView
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_inch_login"
            android:layout_toEndOf="@id/spin_inch_login"
            android:layout_alignTop="@id/spin_inch_login"
            android:hint="@string/inch"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_alert_height_login"
            android:layout_below="@id/txt_height_login"/>
        <TextView
            android:layout_width="70dp"
            android:layout_height= "wrap_content"
            android:id="@+id/txt_weight_login"
            android:hint="@string/weight"
            android:layout_below="@id/txt_alert_height_login"
            android:textSize="18sp"/>
        <Spinner
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/spin_weight_login"
            android:layout_toEndOf="@id/txt_weight_login"
            android:layout_alignTop="@id/txt_weight_login"
            android:layout_marginStart="25dp">
        </Spinner>
        <TextView
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_kilo_login"
            android:layout_toEndOf="@id/spin_weight_login"
            android:layout_alignTop="@id/spin_weight_login"
            android:hint="@string/kilo"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_alert_weight_login"
            android:layout_below="@id/txt_weight_login"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit_login"
            android:hint="@string/submit"
            android:layout_marginStart="75dp"
            android:layout_below="@id/txt_alert_weight_login"
            android:layout_marginTop="25dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel_login"
            android:layout_toEndOf="@id/btn_submit_login"
            android:layout_alignTop="@id/btn_submit_login"
            android:hint="@string/cancel"
            android:layout_marginStart="30dp"/>
    </RelativeLayout>
</ScrollView>