<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel_lay_login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.example.dhrumil.healthcare.MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgv_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_logo"/>
    <EditText
        android:layout_width="258dp"
        android:layout_height="35dp"
        android:id="@+id/edt_username"
        android:layout_below="@id/imgv_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/user_name"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="3dp"
        android:background="#55000000"
       android:paddingEnd="3dp" />

    <EditText
        android:layout_width="258dp"
        android:layout_height="35dp"
        android:id="@+id/edt_password"
        android:layout_marginTop="45dp"
        android:hint="@string/pass_word"
        android:textSize="18sp"
        android:layout_alignStart="@id/edt_username"
        android:layout_below="@+id/edt_username"
        android:inputType="textPassword"
        android:ems="10"
        android:paddingTop="5dp"
        android:paddingStart="3dp"
        android:paddingBottom="5dp"
        android:background="#55000000"
        android:paddingEnd="3dp" />
    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/btn_login"
        android:layout_below="@id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_not_now"
        android:text="@string/not_now"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:clickable="true" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_forgot_password"
            android:text="@string/forgot_password"
            android:layout_below="@id/txt_not_now"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:clickable="true"
        />
    <include

        layout="@layout/footer_text"
        android:id="@+id/rel_lay_footer_text"
        />

</RelativeLayout>
